[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-counters"
version = "1.0.0"
description = "A Python library for reading data from various electrical energy counters including Carlo Gavazzi, Contrel, Diris, Lovato, RedZ, and Schneider devices"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "nobrega8", email = "afonsognobrega@gmail.com" }
]
dependencies = [
  "pyserial",
  "pymodbus"
]

[project.urls]
"Homepage" = "https://github.com/nobrega8/energy-counters"
